--- a/src/views/home/home.css
+++ b/src/views/home/home.css
@@ -6,9 +6,9 @@ div .row{
 
 /* index image */
 .index-image {
-    width: 200px;
-    height: 200px;
-    margin: 100px auto;
+    width: 300px;
+    height: 250px;
+    margin: 50px auto;
 }
 
 .index-image img {
@@ -19,15 +19,17 @@ div .row{
 /* index about me */
 .about-me {
     width: 90%;
-    margin-top: 100px;
+    margin-top: 60px;
 }
 
 .about-me h1{
-
+    font-size: 2.2em;
+    font-weight: bold;
     color: #fdb837;
 }
 
 .about-me p{
+    font-size: 1.5em;
     text-align: justify;
 }
 
@@ -37,7 +39,7 @@ div .row{
 }
 
 .resume-explore .resume {
-    width: 130px;
+    width: 200px;
     margin-right: 5px;
     border-radius: 10px;
     background-color: #fdb837;
@@ -45,6 +47,7 @@ div .row{
 }
 
 .resume-explore .resume a{
+    font-size: 1.5em;
     color: #ffffff;
     display: block;
     text-align: center;
@@ -52,13 +55,14 @@ div .row{
 }
 
 .resume-explore .explore {
-    width: 100px;
+    width: 150px;
     background: none;
     border-radius: 10px;
     border: 1px solid #fdb837;
 }
 
 .resume-explore .explore a{
+    font-size: 1.5em;
     display: block;
     text-align: center;
     color: #fdb837;
@@ -68,14 +72,18 @@ div .row{
 @media screen and (max-width: 760px) {
     /* index image */
     .index-image {
-        width: 200px;
-        height: 170px;
-        margin: 10px auto;
+        width: 250px;
+        height: 250px;
+        margin: 0px auto;
     }
 
     .about-me {
         width: 90%;
         margin: 0px auto;
+    }
+
+    .about-me p{
+        font-size: 20px;
     }
 
     .resume-explore {
