--- a/src/views/home/home.css
+++ b/src/views/home/home.css
@@ -70,6 +70,13 @@ div .row{
 }
 
 @media screen and (max-width: 760px) {
+
+    .about-me h1{
+        font-size: 1.8em;
+        font-weight: bold;
+        color: #fdb837;
+    }
+
     /* index image */
     .index-image {
         width: 250px;
@@ -78,7 +85,7 @@ div .row{
     }
 
     .about-me {
-        width: 90%;
+        width: 80%;
         margin: 0px auto;
     }
 
@@ -89,6 +96,36 @@ div .row{
     .resume-explore {
         text-align: center;
     }
+
+    .resume-explore .resume {
+        width: 150px;
+        margin-right: 20px;
+        border-radius: 10px;
+        background-color: #fdb837;
+        border: 1px solid #fdb837;
+    }
     
+    .resume-explore .resume a{
+        font-size: 1.5em;
+        color: #ffffff;
+        display: block;
+        text-align: center;
+        text-decoration: none;
+    }
+    
+    .resume-explore .explore {
+        width: 100px;
+        background: none;
+        border-radius: 10px;
+        border: 1px solid #fdb837;
+    }
+    
+    .resume-explore .explore a{
+        font-size: 1.5em;
+        display: block;
+        text-align: center;
+        color: #fdb837;
+        text-decoration: none;
+    }
     
 }
