--- a/src/comps/handles/handles.css
+++ b/src/comps/handles/handles.css
@@ -1,18 +1,20 @@
 /* platform desig */
 .platform {
+    width: 100%;
     margin: 0px auto;
     text-align: center;
 
 }
 
 .line-circle{
-    width: 50px;
-    margin: 30px auto;
+    margin: 40px auto;
     display: inline-block;
 }
 
-.platform .line-circle a {
+.line-circle a {
+    width: 50px;
+    display: block;
     font-size: 18px;
-    text-align: center;
     color: #fdb837;
+    text-align: center;
 }
