--- a/src/comps/project/project.css
+++ b/src/comps/project/project.css
@@ -1,20 +1,27 @@
 .project {
-    width: 300px;
+    width: 80%;
     margin: 10px auto;
     border-radius: 10px;
     box-sizing: border-box;
     box-shadow: 0px 0px 1px #000;
+    transition: all 1s ease;
+}
+
+.project:hover {
+    box-shadow: 1px 1px 3px #fdb837;
 }
 
 .project .pro-title {
     padding: 10px;
+    font-size: 1.5em;
+    font-weight: bold;
     text-align: center;
     margin: 0px 0px 0px;
 }
 
 
 .pro-img {
-    width: 250px;
+    width: 80%;
     margin: 0px auto;
 }
 
@@ -23,3 +30,69 @@
     height: 100%;
     box-shadow: 0px 0px 1px #000;
 }
+
+.disc-head {
+    width: 80%;
+    font-size: 1em;
+    font-weight: bold;
+    margin: 10px auto;
+}
+
+.pro-disc {
+    width: 80%;
+    font-size: 14px;
+    margin: 0px auto;
+    margin-bottom: 10px;
+}
+
+.pro-foot {
+    width: 80%;
+    margin: 0px auto;
+    list-style: none;
+    padding: 0px 0px 0px 0px;
+    border-top: solid 1px #ddd;
+}
+
+.pro-foot .githubLink{
+    width: 50%;
+    display: inline-block;
+}
+
+.githubLink a{
+    width: 80%;
+    padding: 5px;
+    color: #000;
+    display: block;
+    font-size: 12px;
+    overflow: hidden;
+    text-decoration: none;
+}
+
+.githubLink a .icon {
+    color: #fdb837;
+}
+
+
+.pro-foot .webLink{
+    width: 50%;
+    display: inline-block;
+}
+
+.webLink a {
+    width: 80%;
+    float: right;
+    padding: 5px;
+    color: #000;
+    display: block;
+    font-size: 12px;
+    overflow: hidden;
+    text-align: right;
+    text-decoration: none;
+}
+
+.webLink a .icon {
+    color: #fdb837;
+}
+
+
+
